--- a/Whatsapp_day2/index.html
+++ b/Whatsapp_day2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="one">
-   <img src="logo.svg" alt="No img" width="120" height="17px" >
+   <img src="logo.svg" alt="LOGO-1" width="120" height="17px" >
   <link rel="shortcut icon" href="logo.svg" type="image/x-icon">
     <div id="two" style="display: flex;">
     <div class="sat" >
